--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="staff">#5c6cde</color>
     <color name="login_gray">#9b9b9b</color>
+    <color name="line">#d5d5d5</color>
+    <color name="hyper_link_color">#449dd8</color>
 </resources>
