--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="image_size">60dp</dimen>
+    <dimen name="list_avatar_image_size">60dp</dimen>
+    <dimen name="detail_avatar_image_size">150dp</dimen>
 </resources>
