--- a/app/src/main/res/layout/git_user_item.xml
+++ b/app/src/main/res/layout/git_user_item.xml
@@ -9,12 +9,12 @@
     android:elevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/user_container"
+        android:id="@+id/cl_user_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/avatar"
+            android:id="@+id/ci_avatar"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="24dp"
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/login"
+            android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -31,13 +31,13 @@
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintBottom_toTopOf="@id/staff"
-            app:layout_constraintLeft_toRightOf="@id/avatar"
+            app:layout_constraintBottom_toTopOf="@id/chip_staff"
+            app:layout_constraintLeft_toRightOf="@id/ci_avatar"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="ooao" />
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/staff"
+            android:id="@+id/chip_staff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/staff"
@@ -45,10 +45,23 @@
             android:textSize="18dp"
             app:chipCornerRadius="18dp"
             app:chipBackgroundColor="@color/staff"
-            app:layout_constraintTop_toBottomOf="@id/login"
+            app:layout_constraintTop_toBottomOf="@id/tv_login"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/login"
+            app:layout_constraintLeft_toLeftOf="@id/tv_login"
             tools:visibility="visible"/>
+        <TextView
+            android:id="@+id/tv_index"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textColor="@color/login_gray"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="48dp"
+            tools:text="1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
