--- a/app/src/main/res/layout/activity_git_user_detail.xml
+++ b/app/src/main/res/layout/activity_git_user_detail.xml
@@ -49,14 +49,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
             android:textColor="@color/login_gray"
             android:textSize="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_name"
-            tools:text="Today is happy." />
+            tools:text="Today is happy.Today is happy.Today is happy.Today is happy.Today is happy.Today is happy." />
 
         <View
             android:id="@+id/v_line"
